syntax = "proto3";

option csharp_namespace = "RateLimiter.Reader";

package reader;


service ReaderService {
  rpc GetRateLimits (GetRateLimitsRequest) returns (RateLimitsReply);
}

message GetRateLimitsRequest {}

message GetRateLimitResponse {
  string route = 1;
  int32 requests_per_minute = 2;
}

message RateLimitsReply {
  repeated GetRateLimitResponse rate_limits = 1;
}

message RateLimitReply {
  string route = 1;
  int32 requests_per_minute = 2;
}

